# bollhav

./: PARQUET.md  POSTGRES.md  README.md  pyproject.toml
bollhav/: __init__.py  batching.py  database.py  model.py  modes.py  postgres.py
bollhav/implementations/: parquet.py  postgres.py
tests/: test_model.py
